      This to prevent dialect objects from 
      being referenced forever for an application that 
      creates an arbitrarily large number of engines
      or dialects.   There is a small performance penalty
      which will be resolved in 0.6.  [ticket:1299]

- postgres
    - Index reflection won't fail when an index with 
      multiple expressions is encountered.

- mssql
    - Preliminary support for pymssql 1.0.1

    - Corrected issue on mssql where max_identifier_length was
      not being respected.

- extensions

    - Fixed a recursive pickling issue in serializer, triggered
      by an EXISTS or other embedded FROM construct.

    - Declarative locates the "inherits" class using a search
      through __bases__, to skip over mixins that are local
      to subclasses.   
      
    - Declarative figures out joined-table inheritance primary join
      condition even if "inherits" mapper argument is given 
      explicitly. 

    - Declarative will properly interpret the "foreign_keys" argument
      on a backref() if it's a string.
      
    - Declarative will accept a table-bound column as a property
      when used in conjunction with __table__, if the column is already
      present in __table__.  The column will be remapped to the given 
      key the same way as when added to the mapper() properties dict.
      
0.5.2
======

- orm
    - Further refined 0.5.1's warning about delete-orphan cascade
      placed on a many-to-many relation.   First, the bad news:
      the warning will apply to both many-to-many as well as
      many-to-one relations.  This is necessary since in both 
      cases, SQLA does not scan the full set of potential parents
      when determining "orphan" status - for a persistent object
      it only detects an in-python de-association event to establish
      the object as an "orphan".  Next, the good news: to support 
      one-to-one via a foreign key or assocation table, or to 